<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="16dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="36sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <!-- First Row -->
        <Button
            android:id="@+id/buttonClear"
            android:text="C"
            style="@style/CalculatorButton" />
        <Button
            android:id="@+id/buttonSqrt"
            android:text="√"
            style="@style/CalculatorButton" />
        <Button
            android:id="@+id/buttonPercent"
            android:text="%"
            style="@style/CalculatorButton" />
        <Button
            android:id="@+id/buttonDivide"
            android:text="÷"
            style="@style/CalculatorButton" />

        <!-- Number Buttons -->
        <Button
            android:id="@+id/button7"
            android:text="7"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/button8"
            android:text="8"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/button9"
            android:text="9"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/buttonMultiply"
            android:text="×"
            style="@style/CalculatorButton" />

        <Button
            android:id="@+id/button4"
            android:text="4"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/button5"
            android:text="5"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/button6"
            android:text="6"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/buttonSubtract"
            android:text="-"
            style="@style/CalculatorButton" />

        <Button
            android:id="@+id/button1"
            android:text="1"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/button2"
            android:text="2"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/button3"
            android:text="3"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/buttonAdd"
            android:text="+"
            style="@style/CalculatorButton" />

        <Button
            android:id="@+id/button0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="0"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/buttonDecimal"
            android:text="."
            style="@style/NumberButton" />
        <Button
            android:id="@+id/buttonEquals"
            android:text="="
            style="@style/CalculatorButton" />
    </GridLayout>
</LinearLayout>
